--- a/main.ipynb
+++ b/main.ipynb
@@ -1,22 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "main.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOEpa6e9oCi9TYrplZAAC9+",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "TPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -30,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "vQxUVg16D9hm"
       },
@@ -45,19 +27,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive',force_remount=True)\n",
-        "DATA_PATH = \"/content/drive/My Drive/autobot-tryst-dataset\"\n"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KCZH26-8Fhyr",
-        "outputId": "df939584-abeb-46d6-d497-0d77272f74c7"
+        "outputId": "8c982f0e-0ec3-4bee-a71c-b18de8e9fca3"
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,19 +43,29 @@
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive',force_remount=True)\n",
+        "DATA_PATH = \"/content/drive/My Drive/autobot-tryst-dataset\"\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "uploading files of gdrive to colab"
-      ],
       "metadata": {
         "id": "CTPwfQVAGtke"
-      }
+      },
+      "source": [
+        "uploading files of gdrive to colab"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "wSo7VkxcGssZ"
+      },
+      "outputs": [],
       "source": [
         "!cp /content/drive/MyDrive/autobot-tryst-dataset/Animal/animal.zip /content/\n",
         "!cp /content/drive/MyDrive/autobot-tryst-dataset/Person/person.zip /content/\n",
@@ -88,39 +75,27 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "wSo7VkxcGssZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "copying the datasets"
-      ],
       "metadata": {
         "id": "EdY2w4VuIvoq"
-      }
+      },
+      "source": [
+        "copying the datasets"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!unzip animal.zip\n",
-        "!unzip person.zip\n",
-        "!unzip stop.zip\n",
-        "!unzip roadCones.zip\n",
-        "!unzip trafficLights_complete.zip\n"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wSjt9B6eIysN",
-        "outputId": "b73e9adf-4280-46cc-f261-4281972bf5c3"
+        "outputId": "b7dd8583-f75b-4d77-bb6c-b61536afe629"
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5129,10 +5104,40 @@
             "  inflating: trafficLight_complete/red/edb1bea0-b017-11ec-b170-5ca6e6e3ecc8.jpg  \n"
           ]
         }
+      ],
+      "source": [
+        "!unzip animal.zip\n",
+        "!unzip person.zip\n",
+        "!unzip stop.zip\n",
+        "!unzip roadCones.zip\n",
+        "!unzip trafficLights_complete.zip\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nOeyVpXxLRiz",
+        "outputId": "423722f4-28af-4c1a-f81f-d4929479af84"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1498/1498 [00:01<00:00, 985.81it/s] \n",
+            "100%|██████████| 2087/2087 [00:02<00:00, 1038.67it/s]\n",
+            "100%|██████████| 1956/1956 [00:01<00:00, 1242.36it/s]\n",
+            "100%|██████████| 652/652 [00:00<00:00, 967.21it/s]\n",
+            "100%|██████████| 335/335 [00:00<00:00, 950.75it/s]\n",
+            "100%|██████████| 342/342 [00:00<00:00, 1042.00it/s]\n",
+            "100%|██████████| 336/336 [00:00<00:00, 958.61it/s]\n"
+          ]
+        }
+      ],
       "source": [
         "resolution=(100,100)\n",
         "training_data=[]\n",
@@ -5208,45 +5213,20 @@
         "    pass\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nOeyVpXxLRiz",
-        "outputId": "4f45651d-3bcd-419e-9a47-b3de0b77b492"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1498/1498 [00:01<00:00, 817.00it/s]\n",
-            "100%|██████████| 2087/2087 [00:02<00:00, 1036.16it/s]\n",
-            "100%|██████████| 1956/1956 [00:01<00:00, 1200.12it/s]\n",
-            "100%|██████████| 652/652 [00:00<00:00, 930.62it/s]\n",
-            "100%|██████████| 335/335 [00:00<00:00, 943.64it/s]\n",
-            "100%|██████████| 342/342 [00:00<00:00, 985.45it/s]\n",
-            "100%|██████████| 336/336 [00:00<00:00, 906.26it/s]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "converting image to arrays"
-      ],
       "metadata": {
         "id": "HvX3lpOVPfOU"
-      }
+      },
+      "source": [
+        "converting image to arrays"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(training_data)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5254,11 +5234,10 @@
         "id": "eQ5x-s7zVZb_",
         "outputId": "e5280636-37c4-4c5c-cfbc-ac8a77403970"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "IOPub data rate exceeded.\n",
             "The notebook server will temporarily stop sending output\n",
@@ -5272,55 +5251,63 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "print(training_data)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8xx7k1BHPjFK",
+        "outputId": "3eeec991-7946-42f0-9745-6c2c2832cc38"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "0\n",
+            "2\n",
+            "2\n",
+            "0\n",
+            "2\n",
+            "0\n",
+            "0\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "import random\n",
         "random.shuffle(training_data)\n",
         "for i in range(10):\n",
         "\n",
         "  print(training_data[i][1])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8xx7k1BHPjFK",
-        "outputId": "4d043af5-6425-45bf-9669-efdd6ef28363"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "4\n",
-            "0\n",
-            "2\n",
-            "1\n",
-            "4\n",
-            "6\n",
-            "1\n",
-            "6\n",
-            "1\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Shufffling data"
-      ],
       "metadata": {
         "id": "KOvo5CbwPrE2"
-      }
+      },
+      "source": [
+        "Shufffling data"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "EvURIfjWP453"
+      },
+      "outputs": [],
       "source": [
         "X=[]\n",
         "y=[]\n",
@@ -5328,51 +5315,111 @@
         "    X.append(i[0])\n",
         "    y.append(i[1])\n",
         "import numpy as np    \n",
-        "X=np.array(X).reshape(-1,100,100,3)  "
-      ],
-      "metadata": {
-        "id": "EvURIfjWP453"
-      },
-      "execution_count": null,
-      "outputs": []
+        "X=np.array(X).reshape(-1,100,100,3)\n",
+        "  "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X=X/255"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "U5ssyvTHQVx6"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X=X/255"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "normalising for easier training"
-      ],
       "metadata": {
         "id": "aB8pZ1GJQXLX"
-      }
+      },
+      "source": [
+        "normalising for easier training"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "ujc-vrdqG4cA"
+      },
+      "outputs": [],
+      "source": [
+        "import pickle\n",
+        "\n",
+        "pickle_out = open(\"X.pickle\",\"wb\")\n",
+        "pickle.dump(X, pickle_out)\n",
+        "pickle_out.close()\n",
+        "\n",
+        "pickle_out = open(\"y.pickle\",\"wb\")\n",
+        "pickle.dump(y, pickle_out)\n",
+        "pickle_out.close()\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "U9_9fEtOJlfc"
+      },
+      "outputs": [],
+      "source": [
+        "!cp /content/X.pickle /content/drive/MyDrive\n",
+        "!cp /content/y.pickle /content/drive/MyDrive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive.flush_and_unmount"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qPaVg-ZQaSj3",
+        "outputId": "a82a9468-6f4f-4e97-ee9e-f4e3f1c77ac6"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function google.colab.drive.flush_and_unmount>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VdC19HLrQhna"
+      },
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense,Flatten,Activation,Conv2D,MaxPooling2D\n",
         "import pickle\n",
         "import numpy as np"
-      ],
-      "metadata": {
-        "id": "VdC19HLrQhna"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GQs4W5ftQajM"
+      },
+      "outputs": [],
       "source": [
         "model=Sequential()\n",
         "\n",
@@ -5387,44 +5434,37 @@
         "model.add(Activation(\"relu\"))\n",
         "model.add(Dense(7))\n",
         "model.add(Activation('softmax'))"
-      ],
-      "metadata": {
-        "id": "GQs4W5ftQajM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KrCSG-PfQnFB"
+      },
+      "outputs": [],
       "source": [
         "model.compile(optimizer=\"adam\",\n",
         "              loss=\"sparse_categorical_crossentropy\",\n",
         "              metrics=['accuracy'])"
-      ],
-      "metadata": {
-        "id": "KrCSG-PfQnFB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "f27FbKLnQo2k"
+      },
+      "outputs": [],
       "source": [
         "X=np.array(X)\n",
         "y=np.array(y)\n",
         "weights={0:1,1:1,2:1,3:3,4:6,5:6,6:6}"
-      ],
-      "metadata": {
-        "id": "f27FbKLnQo2k"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(len(training_data))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5432,22 +5472,22 @@
         "id": "kYuJ9RYDQ27y",
         "outputId": "21100198-2dfd-48ba-c55f-79908debfb4a"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "6850\n"
           ]
         }
+      ],
+      "source": [
+        "print(len(training_data))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.fit(X,y,epochs=3,validation_split=0.1,class_weight=weights)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5455,11 +5495,10 @@
         "id": "xZwW_LxIQ-dg",
         "outputId": "5157a71b-3af4-4f73-8b76-545b52f12e45"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/3\n",
             "193/193 [==============================] - 1066s 6s/step - loss: 0.0443 - accuracy: 0.9875 - val_loss: 0.0271 - val_accuracy: 0.9912\n",
@@ -5470,47 +5509,69 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.callbacks.History at 0x7f2d787c56d0>"
             ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model.fit(X,y,epochs=3,validation_split=0.1,class_weight=weights)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.save(\"iitd_model.h5\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "kl1dygxDQB3v"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.save(\"iitd_model.h5\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "0-animal,1-human,2-roadcones 3-stop sign 4-blue5-green 6-red"
-      ],
       "metadata": {
         "id": "MuwvCvPwgUqB"
-      }
+      },
+      "source": [
+        "0-animal,1-human,2-roadcones 3-stop sign 4-blue5-green 6-red"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "eqmpNJ3IgTlr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        ""
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "main.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyMCxi9gqxyTRJOru9FYRXdv",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
